# mpago

./: .env.example  .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml  shell.nix
.github/workflows/: lint.yaml  test.yaml
src/: client.rs  common.rs  lib.rs  oauth.rs  payer.rs  payments.rs  subscription.rs  wallet_connect.rs  webhooks.rs
src/client/: mercadopago.rs
src/payments/: create_builder.rs  get_builder.rs  search_builder.rs  types.rs  update_builder.rs
src/subscription/: create_builder.rs  search_builder.rs  types.rs
src/wallet_connect/: agreement.rs
