[package]
name = "mpago"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
async-stream = "0.3.5"
iso_currency = "0.4.4"
reqwest = { version = "0.11", features = ["json"] }
serde = {version = "1.0", features = ["derive"]}
serde-enum-str = "0.4.0"
serde_json = "1.0.105"
serde_with = "3.3.0"
thiserror = "1.0"
tokio-stream = "0.1.14"

[dev-dependencies]
tokio = {version = "1.32", features = ["full"]}
dotenvy = "0.15"
