[package]
name = "mpago"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
async-stream = "0.3.5"
iso_currency = "0.4.4"
reqwest = { version = "0.11", features = ["json"] }
serde = {version = "1.0", features = ["derive"]}
serde-enum-str = "0.4.0"
serde_json = "1.0.105"
serde_with = "3.3.0"
thiserror = "1.0"
tokio-stream = "0.1.14"
rust_decimal = { version = "1.32.0", features = ["serde-with-float", "serde-with-str"] }
sha2 = "0.10.8"
hmac = "0.12.1"
serde-aux = { version = "4.5.0", default-features = false }

[dev-dependencies]
tokio = {version = "1.32", features = ["full"]}
dotenvy = "0.15"
hex-literal = "0.4.1"
